update bashrc with docker

--- a/dockernginx/Dockerfile
+++ b/dockernginx/Dockerfile
@@ -24,7 +24,7 @@ RUN     cd nginx-${NGINX_VERSION} \
 	--with-http_image_filter_module --with-http_dav_module --with-http_flv_module --with-http_mp4_module --with-stream \
 	--with-stream_ssl_module --with-mail --with-mail_ssl_module --with-http_gzip_static_module --with-http_gunzip_module \
 	--with-http_stub_status_module --with-openssl=/tmp/openssl-${OPENSSL_VERSION} \
-	&& make -4j && make install
+	&& make && make install
 
 
 
