add same bind version

--- a/dockerapache/Dockerfile
+++ b/dockerapache/Dockerfile
@@ -1,4 +1,12 @@
-FROM centos
-RUN yum -y install httpd
+FROM opensuse/leap
+
+MAINTAINER Hao.yu01@sap.com - lastupdate 2020.11.19
+
+RUN RUN zypper --gpg-auto-import-keys ref
+
+RUN zypper addrepo -f http://packman.inode.at/suse/openSUSE_Leap_15.2/ packman
+
+RUN zypper install httpd
+
 CMD apachectl -DFOREGROUND
 
